# flecs

./: .gitignore  CMakeLists.txt
include/: flecs.h
include/flecs/: bake_config.h  flecs.hpp  os_api.h
include/flecs/cpp/: component.hpp  entity.hpp  iter.hpp
include/flecs/private/: api_defines.h  map.h  vector.h
include/flecs/util/: api_support.h  api_support_internal.h  os_api.h
src/: column_system.c  entity.c  err.c  type.c  vector.c  world.c
src/addons/: stats.c
